# nyarchive

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: crashtrace.c.952DCB69F0F88D90.idx  crashtrace.h.EA48CD15FE9D369E.idx
src/: content_headers.h  test.c
src/include/nyarchive/: headers.h  nyarchive.h  types.h
src/lib/: headers.c
src/utils/: crashtrace.c  crashtrace.h
